# C-Rotation

./: .cursorignore  .gitignore  CMakeLists.txt  README.md
RotationCreator/: CMakeLists.txt
RotationCreator/src/: SpellData.h  main.cpp
src/: dllmain.cpp  hook.cpp  hook.h
src/fishing/: FishingBot.cpp  FishingBot.h
src/game_state/: GameStateManager.cpp  GameStateManager.h
src/gui/: RotationsTab.cpp  RotationsTab.h  gui.cpp  gui.h
src/gui/tabs/: FishingTab.cpp  FishingTab.h  logs_tab.h  objects_tab.cpp  objects_tab.h
src/lua/: lua_interface.cpp  lua_interface.h  lua_types.h
src/objectManager/: objectManager.cpp  objectManager.h
src/spells/: SpellManager.cpp  SpellManager.h  auras.cpp  auras.h  castspell.cpp  castspell.h  cooldowns.cpp  cooldowns.h  targeting.cpp  targeting.h
src/types/: FactionInfo.h  Rotation.h  types.h  wowgameobject.cpp  wowgameobject.h  wowobject.cpp  wowobject.h  wowplayer.cpp  wowplayer.h  wowunit.cpp  wowunit.h
src/utils/: memory.cpp  memory.h
